fix broken link in index.mdx

--- a/index.mdx
+++ b/index.mdx
@@ -16,7 +16,7 @@ LondonTransit brings up-to-date information about public transport in London to 
   <Card
     title="Documentation"
     icon="book"
-    href="https://londontransit.org.uk/docs"
+    href="/commands/commands-introduction"
   >
     Explore what LondonTransit can do and how to use it
   </Card>
